feat(v1.0): 改为单体